--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     </header>
     <!-- contenedor -->
     <main>
-      <div class="container p-0">
+      <div class="container-fluid p-2">
         <div class="card-group">
             <!-- <div class="col-md-4 p-0"> -->
                 <div class="card mb-3">
@@ -74,7 +74,7 @@
             
         </div>
         
-        <form action="images/index.html" method="post">
+        <form action="exito.html" method="post">
           <div class="row">
             <div class="col mb-3">
                 <label for="email" class="mb-1">Email</label>
