libero el formulario para que no tenga que volver a carga

--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
             <!-- </div> -->
             
         </div>
-        
-        <form action="exito.html" method="post">
+        <!--esto va en form: action="#" method="post" -->
+        <form> 
           <div class="row">
             <div class="col mb-3">
                 <label for="email" class="mb-1">Email</label>
